# plant_monitoring

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
arduino/: README.md
arduino/esp8366/dht_22/: dht_22.ino
arduino/just_print_through_serial/: just_print_through_serial.ino
arduino/sketch_mkr_1010/: sketch_mkr_1010.ino
plant_app/: asgi.py  manage.py  models.py  settings.py  urls.py  wsgi.py
plant_app/plant_app/: settings.py
sensors/: admin.py  api.py  models.py  serializers.py  tests.py  urls.py  views.py
sensors/migrations/: 0001_initial.py
sensors/templates/plant_app/: add_datapoint.html  index.html  sensor_detail.html
src/: requirements.txt  tests.py
src/sensor_data/: utils.py  utils_test.py
